# ls2-glib

./: .gitmodules  CMakeLists.txt  README.md
doc/: Doxyfile.in
files/pkgconfig/: libgls2-ndk.pc.in  libgls2.pc.in
include/gls2/: gls2-boxed-types.h  gls2-handle.h  gls2-macros.h  gls2-mainloop.h  gls2.h
include/public/gls2/: gls2-general.h  gls2-handle-priv.h  gls2-handle.h  gls2-macros.h  gls2-message.h  gls2-subscription.h  gls2.h
src/: gls2-boxed-types.c  gls2-call.c  gls2-call.h  gls2-general.c  gls2-handle.c  gls2-log.c  gls2-log.h  gls2-mainloop.c  gls2-message.c  gls2-signal.c  gls2-signal.h  gls2-subscription.c  gls2-subscription.h  gls2.h  glus2-boxed-types.c  glus2-boxed-types.h  glus2-call.c  glus2-call.h  glus2-general.c  glus2-general.h  glus2-handle.c  glus2-handle.h  glus2-log.c  glus2-log.h  glus2-macros.h  glus2-mainloop.c  glus2-mainloop.h  glus2-message.c  glus2-message.h  glus2-signal.c  glus2-signal.h  glus2-subscription.c  glus2-subscription.h  glus2.h
